2009-12-17  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance benchmarking framework.
	
	* build-aux/genbench.sh: Remove. Functionality moved to...
	* build-aux/benchmarks.mk: ... here. Enhance to support Automake's
	test engine in `make check'. Also keep as much rules as possible
	within one level of `make'.

	* benchmarks/fft/Makefile.am: Append to `DISTCLEANFILES' as it is
	now defined in `benchmarks.mk'.

2009-12-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Provide a faster FFT benchmark.

	* benchmarks/fft/fft-bench.c: When `FFT_SMALL_BENCH' is defined,
	only perform the forward FFT with no bit reversal.

	* benchmarks/fft/fft-bench1-small.c,
	* benchmarks/fft/fft-bench2-small.c,
	* benchmarks/fft/fft-bench1-small.inputs,
	* benchmarks/fft/fft-bench2-small.inputs: New. Use the new "small"
	mode of `fft-bench.c'.

	* benchmarks/fft/Makefile.am: Update accordingly.

2009-12-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Simplify the LMK3 benchmark.

	* benchmarks/livermore/kernel3.c: Use a simple N/P reduction.

2009-12-14  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	New `perf' demo for performance metrics.

	* demo/perf.c: New.

	* demo/Makefile.am: Update accordingly.

2009-12-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enable reduction code in LL suite.

	* benchmarks/livermore/kernel3.c,
	* benchmarks/livermore/kernel4.c: Enable REDUCTIONS code.

2009-12-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Embed more information in benchmark results.
	
	* build-aux/genbench.sh: Use `-t' with `slr' when running
	benchmarks.

2009-12-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor fixes to LL suite.
	
	* build-aux/genbench.sh: Fix typo. 

	* benchmarks/livermore/ll-bounds.ods,
	* benchmarks/livermore/ll-bounds.csv: Fix bounds for LK6.
	
	* benchmarks/livermore/kernel6.c, 
	* benchmarks/livermore/kernel21.c: Simplify array declarations.

2009-12-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Various fixes to the LL suite.
	